fix(Planogram):load cell edit button replacement and alignment

--- a/src/modules/kiosks/styles.less
+++ b/src/modules/kiosks/styles.less
@@ -37,6 +37,8 @@
   .load-cell-info {
     margin: 0 10px 0 0;
     display: flex;
+    width: 100%;
+    justify-content: center;
   }
   .load-cell-title {
     margin: 0 0 5px;
@@ -69,7 +71,6 @@
     }
   }
   .load-cell-body {
-    width: 100%;
     p:not(:last-child) {
       margin: 0 0 4px;
     }
@@ -84,10 +85,10 @@
     align-self: center;
   }
   .load-cell-tags {
-    align-self: center;
+    align-self: flex-start;
   }
   .edit-icon {
-    margin: 0 0 auto;
+    margin: 0 0 10px 0;
   }
 }
 .edit-icon {
